--- a/stylesheet.css
+++ b/stylesheet.css
@@ -118,7 +118,7 @@ nav h3 {
 	height: 100%;
 	background-size: cover;
 	background-position: center;
-	background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(images/gym2.jpg);
+	background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(gym2.jpg);
 }*/
 
 /*++++++++++++++++++++++++++++++ End of Header Section  ++++++++++++++++++++++++++++++*/
